2008-06-19  Werner Koch  <wk@g10code.com>

	* olflange-dlgs.cpp (GPGOptionsDlgProc): Change S/MIME enabled
	message icon.
	* olflange.cpp (GpgolExt): Ditto for the new version installed
	notice.

2008-06-12  Werner Koch  <wk@g10code.com>

	* dialogs.rc: Add button for calling the engine's configuration.
	* dialogs.h (IDC_GPG_CONF): New.
	* engine.c (engine_start_confdialog): New.
	* engine-assuan.c (op_assuan_start_confdialog): New.
	* olflange-dlgs.cpp (GPGOptionsDlgProc): Act upon the button.

	* mapihelp.cpp (mapi_get_from_address): New.
	* engine.c (engine_decrypt_start, engine_verify_start): Add new
	arg FROM_ADDRESS.
	* engine-assuan.c (op_assuan_verify, op_assuan_decrypt): Ditto.
	* mimeparser.c (mime_verify, mime_verify_opaque, mime_decrypt):
	Pass FROM_ADDRESS to the backend.

	* olflange.cpp (DllUnregisterServer): Delete CLSIDs.

2008-06-05  Werner Koch  <wk@g10code.com>

	* mimeparser.c (mime_decrypt): Set session number and title.
	(mime_verify_opaque, mime_verify): Ditto.
	* mapihelp.cpp (mapi_get_subject): New.
	* engine.c (engine_set_session_number, engine_set_session_title) 
	(engine_set_sender_address): New.
	(struct engine_filter_s): Add fields session_number, session_title
	and sender_address.
	(engine_private_get_session_number): New. 
	(engine_private_get_session_title): New.
	(release_filter): Release them.
	(engine_new_session_number): New.
	* engine-assuan.c (send_session_info): New
	(op_assuan_decrypt, op_assuan_verify): Call it.
	(op_assuan_sign): Use the end-of-option option for the SENDER command.

2008-05-28  Werner Koch  <wk@g10code.com>

	* dialogs.h (IDC_BODY_AS_ATTACHMENT): New.
	* dialogs.rc: Add body-as-attachemnt checkbox to the otpion
	dialog.
	* olflange-dlgs.cpp (set_labels, GPGOptionsDlgProc): Add it.
	* main.c (write_options, read_options): Handle bodyAsAttachment
	registry key.
	* mimeparser.c (start_attachment): Do not set the hidden flag if
	the new option is used.
	* mapihelp.cpp (mapi_test_attach_hidden): New.