@@ -1,3 +1,8 @@
+2008-06-27  Werner Koch  <wk@g10code.com>
+
+	* mapihelp.cpp (get_gpgololdmsgclass_tag): New.
+	(mapi_change_message_class): Save old message class.
+
 2008-06-19  Werner Koch  <wk@g10code.com>
 
 	* olflange-dlgs.cpp (GPGOptionsDlgProc): Change S/MIME enabled
